--- a/404.html
+++ b/404.html
@@ -1,14 +1,15 @@
 <!doctype html>
 <html>
-  <head>
-    <!-- This stores the URL the user was attempting to go to in sessionStorage,
-    and then redirects all 404 responses to the app’s index.html page -->
-    <!-- See http://www.backalleycoder.com/2016/05/13/sghpa-the-single-page-app-hack-for-github-pages/ -->
-    <script>
-      sessionStorage.redirect = location.href;
-    </script>
-    <meta http-equiv="refresh" content="0;URL='https://psykolm22.github.io/ng2-google-place-autocomplete'"></meta>
-  </head>
-  <body>
-  </body>
+<head>
+  <meta charset="utf-8">
+  <title>ng2-google-place-autocomplete</title>
+  <base href="/ng2-google-place-autocomplete/">
+  <link rel="stylesheet" href="styles.css">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <link rel="icon" type="image/x-icon" href="favicon.ico">
+  <script  type="text/javascript" src="https://maps.googleapis.com/maps/api/js?libraries=places"></script>
+</head>
+<body>
+  <app-root>Loading...</app-root>
+<script type="text/javascript" src="inline.js"></script><script type="text/javascript" src="styles.8df3abb622e3285d846f.bundle.js"></script><script type="text/javascript" src="main.2d949bcc6439777f53da.bundle.js"></script></body>
 </html>
