--- a/404.html
+++ b/404.html
@@ -1,6 +1,10 @@
 <!doctype html>
 <html>
 <head>
+   <script>
+      sessionStorage.redirect = location.href;
+    </script>
+    <meta http-equiv="refresh" content="0;URL='https://psykolm22.github.io/ng2-google-place-autocomplete'"></meta>
   <meta charset="utf-8">
   <title>ng2-google-place-autocomplete</title>
   <base href="/ng2-google-place-autocomplete/">
